generated/checker-for-evaluation/generated/test-Memory-Leak-4050957c7c2c14aa795dbf423b4180d5ac04e113/build_logs/1/build_error_log1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘bool {anonymous}::WhileConditionVisitor::VisitWhileStmt(clang::WhileStmt*)’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:71:38: error: base operand of ‘->’ has non-pointer type ‘clang::ASTContext’
   71 |     ExplodedNode* N = BR.getContext()->generateNonFatalErrorNode();
      |                                      ^~
In file included from /usr/include/c++/11/memory:76,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/llvm/include/llvm/Support/Casting.h:20,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Basic/LLVM.h:21,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/APValue.h:16,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/Stmt.h:16,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Analysis/PathDiagnostic.h:16,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:17,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:1:
/usr/include/c++/11/bits/unique_ptr.h: In instantiation of ‘typename std::_MakeUniq<_Tp>::__single_object std::make_unique(_Args&& ...) [with _Tp = clang::ento::BasicBugReport; _Args = {const clang::ento::BugType&, const char (&)[81], clang::ento::ExplodedNode*&}; typename std::_MakeUniq<_Tp>::__single_object = std::unique_ptr<clang::ento::BasicBugReport, std::default_delete<clang::ento::BasicBugReport> >]’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:74:51:   required from here
/usr/include/c++/11/bits/unique_ptr.h:962:30: error: no matching function for call to ‘clang::ento::BasicBugReport::BasicBugReport(const clang::ento::BugType&, const char [81], clang::ento::ExplodedNode*&)’
  962 |     { return unique_ptr<_Tp>(new _Tp(std::forward<_Args>(__args)...)); }
      |                              ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:1:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:256:3: note: candidate: ‘clang::ento::BasicBugReport::BasicBugReport(const clang::ento::BugType&, llvm::StringRef, clang::ento::PathDiagnosticLocation)’
  256 |   BasicBugReport(const BugType &bt, StringRef desc, PathDiagnosticLocation l)
      |   ^~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:256:76: note:   no known conversion for argument 3 from ‘clang::ento::ExplodedNode*’ to ‘clang::ento::PathDiagnosticLocation’
  256 |   BasicBugReport(const BugType &bt, StringRef desc, PathDiagnosticLocation l)
      |                                                     ~~~~~~~~~~~~~~~~~~~~~~~^
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:251:7: note: candidate: ‘clang::ento::BasicBugReport::BasicBugReport(const clang::ento::BasicBugReport&)’
  251 | class BasicBugReport : public BugReport {
      |       ^~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:251:7: note:   candidate expects 1 argument, 3 provided
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:251:7: note: candidate: ‘clang::ento::BasicBugReport::BasicBugReport(clang::ento::BasicBugReport&&)’
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:251:7: note:   candidate expects 1 argument, 3 provided
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
